static_library("myapp") {
    sources = [
        "wifi.c",
        "src/wifi_connect.c",
        "src/aiot_mqtt_sign.c",
        "src/base64.c"
    ]

    cflags = [ "-Wno-unused-variable" ]
    cflags += [ "-Wno-unused-but-set-variable" ]

    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//foundation/communication/interfaces/kits/wifi_lite/wifiservice",
        "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include/",
        "//third_party/cJSON",
        "//third_party/paho_mqtt/MQTTPacket/src",
        "//third_party/paho_mqtt/MQTTClient-C/src",
        "//kernel/liteos_m/components/cmsis/2.0",
        "include"
    ]
    deps = [
             "//third_party/paho_mqtt:pahomqtt_static",
    ]
}